@@ -61,6 +61,7 @@ test_that("clusterRows responds to the functions and full=TRUE", {
     full <- clusterRows(m, MbkmeansParam(sqrt), full=TRUE)
     expect_identical(out, full$cluster)
     expect_true(is.list(full$objects))
+    expect_identical(names(full$objects), "mbkmeans")
 })
 
 test_that("clusterRows responds to the options", {
